Name:           commenter
Version:        0.0.0.1
build-type:     Simple
Author:         Amy Shen
Maintainer:     
Stability:      experimental
Synopsis:       
Category:       Web
Cabal-Version:  >= 1.6

Description: Commenting system

Library
  Build-Depends:
    base              >= 4.5     && < 5.0
   ,transformers     
   ,mtl             
   ,containers     
   ,bytestring    
   ,text         
   ,lio         
   ,hails-0.9.2.2
   ,blaze-html
   ,http-types       
   ,pureMD5         
   ,aeson          
   ,process       
   ,regex-posix  
   ,regex-compat
   ,pandoc      
   ,highlighting-kate
   ,time            
   ,unix           
   ,filepath      
   ,lio-cjail    
   ,old-locale  
   ,xml        
   ,feed      
   ,MissingH
   ,xhtml  
   ,bson  

  Exposed-Modules: Commenter.Models
                   Commenter.Policy

  Other-Modules: Commenter.Controllers
                 Commenter.Views
